# PLDAC

./: test_cnn.ipynb
intro/: 03-1-dqn-introduction.student.ipynb  03-2-dqn-full.student.ipynb  bbrl-test.ipynb  code_source.txt  outputSablium.txt  preprocessing-titouan.ipynb  questionsMeeting1.txt  test_preprocessing.ipynb
intro/SaBBLium-main/: .gitignore  LICENSE  README.md  pyproject.toml
intro/SaBBLium-main/sabblium/: __init__.py  agent.py  workspace.py
intro/SaBBLium-main/sabblium/agents/: README.md  __init__.py  utils.py
intro/SaBBLium-main/sabblium/agents/envs/: __init__.py  gyma.py
intro/test_mathis/: test_preprocessing.ipynb
src/: 03-1-dqn-introduction.student.ipynb  03-2-dqn-full.student.ipynb  best_cnn_grey.pth  cartpole.py  cnn_experiments.ipynb  cnn_grey_1000.pth  cnn_grey_2_img.pth  cnn_training.ipynb  cnn_training_2.ipynb  debugging_dqn.ipynb  first_tests.py  implementation_v1.py  implementation_v2.py  main.ipynb  main.py  main_tests.ipynb  new_test.py  old_dqn_run.py  test_noReplayBuffer.py  updated_dqn.py
src/configs/: dqn_cartpole.yaml  dqn_lunar_lander.yaml
src/mon_env/: setup.py  test.py
tblogs/best_agent-1711899906.5737545/: events.out.tfevents.1711899910.DESKTOP-NHDMO2O.13636.0
tblogs/best_agent-1711900244.7178733/: events.out.tfevents.1711900248.DESKTOP-NHDMO2O.9856.0
tblogs/best_agent-1711900285.8154914/: events.out.tfevents.1711900289.DESKTOP-NHDMO2O.17196.0
tblogs/best_agent-1711901162.6017234/: events.out.tfevents.1711901166.DESKTOP-NHDMO2O.14596.0
tblogs/best_agent-1711901669.1826284/: events.out.tfevents.1711901672.DESKTOP-NHDMO2O.9488.0
tblogs/best_agent-1711901736.6257672/: events.out.tfevents.1711901740.DESKTOP-NHDMO2O.16452.0
tblogs/best_agent-1711901803.4975517/: events.out.tfevents.1711901807.DESKTOP-NHDMO2O.2540.0
tblogs/best_agent-1711901863.6652873/: events.out.tfevents.1711901867.DESKTOP-NHDMO2O.3392.0
tblogs/best_agent-1711901911.538837/: events.out.tfevents.1711901915.DESKTOP-NHDMO2O.17380.0
tblogs/best_agent-1711902012.3817952/: events.out.tfevents.1711902015.DESKTOP-NHDMO2O.9936.0
tblogs/best_agent-1711905525.0332901/: events.out.tfevents.1711905528.DESKTOP-NHDMO2O.16636.0
tblogs/best_agent-1711908938.9935877/: events.out.tfevents.1711908945.DESKTOP-NHDMO2O.5300.0
tblogs/best_agent-1711909061.2607846/: events.out.tfevents.1711909064.DESKTOP-NHDMO2O.1616.0
tblogs/best_agent-1711909084.484843/: events.out.tfevents.1711909087.DESKTOP-NHDMO2O.19976.0
tblogs/best_agent-1711909175.391786/: events.out.tfevents.1711909178.DESKTOP-NHDMO2O.18700.0
(+1225 files in other folders)
